src/styles/globals.scss
/* ... */
// =============================================================================
// Pages
// =============================================================================

.PageHeader,
.PageFooter {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: pxToRem(16px);
}

.PageHeader {
  flex-wrap: wrap;

  .Link {
    --Link-icon-size: pxToRem(14px);
    font-size: pxToRem(14px);
    font-weight: var(--sds-fw-semi-bold);

    // to fix Safari only styling bug
    .Link__icon {
      width: pxToRem(14px);
      height: pxToRem(14px);
    }
  }
}

.PageBody {
  display: flex;
  flex-direction: column;
  gap: pxToRem(16px);

  &__title {
    display: flex;
    align-items: center;
    gap: pxToRem(4px);

    &__icon {
      display: block;
      width: pxToRem(14px);
      height: pxToRem(14px);

      svg {
        display: block;
        width: 100%;
        height: 100%;
        stroke: var(--sds-clr-red-09);
      }
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    gap: pxToRem(16px);
    padding: pxToRem(16px);
    background-color: var(--sds-clr-gray-03);
    border-radius: pxToRem(8px);

    &--error {
      border: 1px solid var(--sds-clr-red-06);
    }
  }

  &__scrollable {
    max-width: 100%;
    max-height: pxToRem(600px);
    overflow: auto;
  }
}

// Maintenance Banner
.MaintenanceBanner {
  .Banner__message {
    max-width: 100%;
  }

  .Banner--primary .Banner__content a {
    color: var(--sds-clr-lilac-11);
    text-decoration: none;
    transition: color var(--sds-anim-transition-default);

    @media (hover: hover) {
      &:hover {
        color: var(--sds-clr-lilac-12);
      }
    }
  }
}

// Introduction
.CardText {
  display: flex;
  flex-direction: column;
  gap: pxToRem(12px);

  p {
    margin-bottom: 0 !important;
  }
}

.IntroFooter {
  flex: 1;
  display: flex;
  align-items: flex-end;
  justify-content: space-between;
  gap: pxToRem(12px);
  font-size: pxToRem(14px);
  line-height: pxToRem(20px);
  flex-wrap: wrap;
}

// Endpoints
.Endpoints {
  &__urlBar {
    display: flex;
    align-items: center;
    justify-content: space-between;
    gap: pxToRem(8px);
    flex-wrap: wrap;

    .Input {
      width: auto;
      flex: 1;
      min-width: 0;
    }

    &__requestMethod {
      color: var(--sds-clr-teal-11) !important;
    }

    @media screen and (max-width: 560px) {
      .Input {
        min-width: auto;
      }

      &__buttons {
        flex: 1;

        .Button {
          flex: 1;
        }
      }
    }

    &__footer {
      flex-wrap: wrap;
    }
  }

  &__content {
    display: flex;
    flex-direction: column;
    gap: pxToRem(12px);
  }

  .Input--disabled {
    input:read-only {
      cursor: default;
    }
  }

  &__txTextarea {
    .Textarea textarea {
      word-break: break-all;
    }
  }
}

// Saved Transactions
.SavedTransactions {
  &__name {
    &__postMethod {
      color: var(--sds-clr-gold-11) !important;
    }
  }
}

// Operations
.NumberFractionPicker {
  &__fraction__divider {
    padding-top: pxToRem(22px);
    color: var(--sds-clr-gray-09);

    @media screen and (max-width: 610px) {
      display: none;
    }
  }

  &__container {
    flex-wrap: wrap;

    .Input {
      flex: 1;
      width: auto;
    }
  }
}

// Create claimable balance
.PredicateTypeWrapper {
  .PredicateWrapper {
    &__split {
      display: grid;
      grid-template-columns: 49% 49%;
      gap: 2%;
      overflow: hidden;

      .PredicateWrapper__split {
        display: flex;
        gap: 0.5rem;

        & > :nth-child(2) {
          border-top: 1px solid var(--sds-clr-gray-06);
          padding-top: 0.5rem;
        }
      }
    }
  }
}

.Operation {
  &__buttons {
    flex-wrap: wrap;

    & > * {
      min-width: fit-content;
    }

    @media screen and (max-width: 440px) {
      .Button--error,
      .Button--secondary {
        flex: 1;
      }

      .Box {
        flex: 1;
      }
    }
  }
}
/* ... */

